fix horizontal scrollbar

--- a/main.css
+++ b/main.css
@@ -1,7 +1,7 @@
 body {
 	background-image: url(images/background.jpg);
 	background-size: 100% auto;
-	overflow: hidden;
+	margin: 0px;
 }
 
 
